<resources>
    <string name="app_name">Hw3_Team8A</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="textview_title">Welcome to the Trivia App</string>
    <string name="button_startTrivia">Start Trivia</string>
    <string name="button_createQuiz" >Create Quiz Question</string>
    <string name="button_deleteQuiz">Delete All My Questions</string>
    <string name="button_finish">Exit</string>
    <string name="button_select_image">Select Image</string>
    <string name="label_image">IMAGE</string>
    <string name="hint_question">Type question here</string>
    <string name="hint_option">Type option here</string>
    <string name="title_activity_create_question">CreateQuestionActivity</string>
    <string name="button_submit">Submit</string>
    <string name="title">Trivia App</string>
    <string name="title_activity_trivia_game">TriviaGame</string>
    <string name="question_number">Number</string>
    <string name="quit">Quit</string>
    <string name="quiz_next">Next</string>
    <string name="quiz_question">Question:</string>
    <string name="title_activity_results_page">ResultsPage</string>
    <string name="results_title">Trivia Results</string>
    <string name="results_subTitle">Correct Answers</string>
    <string name="correct_percentage">0%</string>
    <string name="results_encourage_imperfect">Try again and see if you can get all the correct answers!</string>
    <string name="results_encourage_perfect">Congratulations! You got a perfect score!</string>
    <string name="results_tryAgain">Try Again</string>
</resources>
