<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.elijah.hw3_team8a.ResultsPage"
    android:id="@+id/correct_progressBar">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_title"
        android:id="@+id/results_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_subTitle"
        android:id="@+id/results_subTitle"
        android:layout_below="@+id/results_title"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:layout_marginTop="25dp" />

    <ProgressBar
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:id="@+id/progress_percentCorrect"
        android:layout_below="@+id/results_subTitle"
        android:layout_marginTop="36dp"
        android:layout_alignEnd="@+id/results_title"
        android:layout_alignStart="@+id/results_title"
        android:indeterminate="false"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/correct_percentage"
        android:id="@+id/results_percentage"
        android:layout_alignBottom="@+id/progress_percentCorrect"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/results_encourage_imperfect"
        android:id="@+id/results_encourage"
        android:layout_below="@+id/progress_percentCorrect"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="93dp"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:id="@+id/results_quitButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_tryAgain"
        android:id="@+id/results_tryAgainButton"
        android:layout_alignTop="@+id/results_quitButton"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
