<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.elijah.hw3_team8a.TriviaGame">

    <ImageView
        android:id="@+id/imageV_quizImage"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/blank"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/quiz_quit_button"
        android:layout_marginTop="59dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/question_number"
        android:id="@+id/textV_quizNumber"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_question"
        android:id="@+id/quiz_question"
        android:layout_below="@+id/imageV_quizImage"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:id="@+id/quiz_quit_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_next"
        android:id="@+id/quiz_next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />
    <RadioGroup
        android:id="@+id/radiogroup_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/quiz_question"
        android:layout_marginTop="20dp"/>

</RelativeLayout>
